--- a/TVProject/app/src/main/res/layout/alert_view.xml
+++ b/TVProject/app/src/main/res/layout/alert_view.xml
@@ -9,6 +9,5 @@
         android:id="@+id/edt_userid"
         android:layout_gravity="center_horizontal"
         android:paddingLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp" />
+        android:layout_marginTop="50dp" />
 </LinearLayout>
