--- a/TVproject-master/TVProject/app/src/main/res/layout/activity_main1.xml
+++ b/TVproject-master/TVProject/app/src/main/res/layout/activity_main1.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="3"
+        android:layout_weight="5"
         android:orientation="vertical">
 
         <LinearLayout
@@ -60,7 +60,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="7"
+        android:layout_weight="10"
         android:orientation="vertical">
 
         <LinearLayout
@@ -90,8 +90,16 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="4"
-                android:background="#f668c9"
-                android:orientation="horizontal"></LinearLayout>
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/imageView2"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/fedsj"
+                    android:scaleType="centerCrop" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -101,19 +109,66 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#e57575"></LinearLayout>
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="bottom"
+                        android:paddingLeft="10dp"
+                        android:text="活动倒计时"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:textSize="26dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/timer"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:paddingLeft="10dp"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:textSize="30dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:text="S" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:background="#462a2a"></LinearLayout>
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:paddingLeft="10dp"
+                        android:text="优惠马上用"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:textSize="26dp"
+                        android:textStyle="bold"
+                        android:gravity="bottom" />
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:paddingLeft="10dp"
+                        android:text="微信扫一扫"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:textSize="26dp"
+                        android:textStyle="bold" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
