--- a/TVProject/app/src/main/res/layout/activity_main1.xml
+++ b/TVProject/app/src/main/res/layout/activity_main1.xml
@@ -39,10 +39,10 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:textStyle="bold"
-                android:textSize="16dp"
+                android:textSize="26dp"
                 android:id="@+id/text1"
                 android:text="活动内容："
-                android:textColor="#000000" />
+                android:textColor="@android:color/holo_red_dark" />
 
             <net.bjyfkj.caa.model.MarqueeText
                 android:layout_width="match_parent"
@@ -50,10 +50,10 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:textStyle="bold"
-                android:textSize="16dp"
+                android:textSize="26dp"
                 android:id="@+id/text2"
                 android:text="活动地址："
-                android:textColor="#000000" />
+                android:textColor="@android:color/holo_red_dark" />
         </LinearLayout>
     </LinearLayout>
 
@@ -112,7 +112,7 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
+                    android:layout_weight="2">
 
                     <TextView
                         android:id="@+id/textView5"
@@ -131,12 +131,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:paddingLeft="10dp"
                         android:textColor="@android:color/holo_red_dark"
-                        android:textSize="30dp"
+                        android:textSize="40dp"
                         android:textStyle="bold"
                         android:gravity="center"
-                        android:text="S" />
+                        android:text="s" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -144,7 +143,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="3">
 
                     <TextView
                         android:id="@+id/textView7"
