--- a/TVProject/app/src/main/res/layout/activity_main1.xml
+++ b/TVProject/app/src/main/res/layout/activity_main1.xml
@@ -19,10 +19,38 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <VideoView
-                android:id="@+id/videoview"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+
+                    <VideoView
+                        android:id="@+id/videoview"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"></VideoView>
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/flytxtview"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="10dp"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="100dp"
+                    android:text="本视频由&quot;进魏美甲天虹百货店&quot;赞助播出 (本商场二层)"
+                    android:textColor="#ff0000"
+                    android:textSize="28dp"
+                    android:background="#59000000" />
+            </RelativeLayout>
 
 
         </LinearLayout>
@@ -30,30 +58,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="8"
+            android:layout_weight="5"
             android:orientation="vertical">
 
-            <net.bjyfkj.caa.model.MarqueeText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:textStyle="bold"
-                android:textSize="26dp"
+            <TextView
                 android:id="@+id/text1"
-                android:text="活动内容："
-                android:textColor="@android:color/holo_red_dark" />
-
-            <net.bjyfkj.caa.model.MarqueeText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
+                android:text="爱你有不同，美甲更轻松！"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="50dp"
                 android:textStyle="bold"
-                android:textSize="26dp"
-                android:id="@+id/text2"
-                android:text="活动地址："
-                android:textColor="@android:color/holo_red_dark" />
+                android:gravity="center"
+                android:fontFamily="@android:string/httpErrorUnsupportedScheme" />
+
         </LinearLayout>
     </LinearLayout>
 
@@ -69,6 +88,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="3"
             android:orientation="horizontal">
+
             <net.bjyfkj.caa.model.CarouselViewPager
                 android:id="@+id/mCarouselView"
                 android:layout_width="match_parent"
@@ -93,12 +113,12 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/imageView2"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/fedsj"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/fedsj" />
             </LinearLayout>
 
             <LinearLayout
@@ -109,10 +129,43 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="2">
+                    android:layout_weight="3"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="bottom"
+                        android:paddingLeft="10dp"
+                        android:text="双十一5折券"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:textSize="26dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:paddingLeft="10dp"
+                        android:text="扫描领取"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:textSize="26dp"
+                        android:textStyle="bold"
+                        android:gravity="bottom" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="2"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/textView5"
@@ -131,42 +184,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:text="s"
                         android:textColor="@android:color/holo_red_dark"
                         android:textSize="40dp"
                         android:textStyle="bold"
-                        android:gravity="center"
-                        android:text="s" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="3">
-
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:paddingLeft="10dp"
-                        android:text="优惠马上用"
-                        android:textColor="@android:color/holo_red_dark"
-                        android:textSize="26dp"
-                        android:textStyle="bold"
-                        android:gravity="bottom" />
-
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:paddingLeft="10dp"
-                        android:text="微信扫一扫"
-                        android:textColor="@android:color/holo_red_dark"
-                        android:textSize="26dp"
-                        android:textStyle="bold" />
+                        android:gravity="top"
+                        android:paddingLeft="40dp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
