--- a/TVProject/app/src/main/res/layout/activity_main1.xml
+++ b/TVProject/app/src/main/res/layout/activity_main1.xml
@@ -36,18 +36,23 @@
                 </LinearLayout>
 
 
-                <TextView
+                <net.bjyfkj.caa.model.AlwaysMarqueeTextView
                     android:id="@+id/flytxtview"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="60dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginBottom="10dp"
                     android:background="#59000000"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="100dp"
-                    android:text="本视频由&quot;进魏美甲天虹百货店&quot;赞助播出 (本商场二层)"
+                    android:ellipsize="marquee"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:gravity="center"
+                    android:lines="1"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:text="本视频由&quot;樊文花面膜天虹百货商场店&quot;特约播出 (本商场二层西侧)"
                     android:textColor="#ff0000"
                     android:textSize="28dp" />
             </RelativeLayout>
@@ -60,31 +65,6 @@
             android:layout_height="match_parent"
             android:layout_weight="5"
             android:orientation="vertical">
-
-            <net.bjyfkj.caa.model.AlwaysMarqueeTextView
-                android:id="@+id/item_title"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:ellipsize="marquee"
-                android:focusableInTouchMode="true"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:singleLine="true"
-                android:text="活动内容：甲油胶特价98元原价288元 包括【OPI基础护理一次价值50元 进巍自主品牌甲油胶一次价值238元】"
-                android:textSize="50dp"
-                android:gravity="center_vertical"
-                android:textColor="#ff0000" />
-
-            <net.bjyfkj.caa.model.AlwaysMarqueeTextView
-                android:id="@+id/led2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:singleLine="true"
-                android:text="活动地址：本商场二层电梯右侧"
-                android:textColor="#ff0000"
-                android:textSize="50dp" />
 
 
             <!--<net.bjyfkj.caa.model.CustomTextView-->
@@ -108,6 +88,39 @@
             <!--android:textSize="50dp"-->
             <!--android:textColor="#ff0000" />-->
 
+            <net.bjyfkj.caa.model.AlwaysMarqueeTextView
+                android:id="@+id/led1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical"
+                android:lines="1"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="活动内容：甲油胶特价98元原价288元 包括【OPI基础护理一次价值50元 进巍自主品牌甲油胶一次价值238元】 "
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="50dp" />
+
+            <net.bjyfkj.caa.model.AlwaysMarqueeTextView
+                android:id="@+id/led2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical"
+                android:lines="1"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="活动地址：本商场二层电梯右侧"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="50dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -137,22 +150,6 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_alignParentBottom="false"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:ellipsize="marquee"
-                android:gravity="center"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:singleLine="true"
-                android:text="美丽的指甲，是女孩的第二张名片!"
-                android:textColor="#ff0000"
-                android:textSize="28dp"
-                android:textStyle="bold" />
-
         </RelativeLayout>
 
         <LinearLayout
@@ -170,12 +167,12 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/qrcode"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/fedsj" />
+                    android:src="@drawable/code" />
             </LinearLayout>
 
             <LinearLayout
@@ -192,31 +189,16 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView6"
+                        android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="免费面膜"
-                        android:textColor="#ff0000"
-                        android:textSize="25dp" />
+                        android:gravity="center_vertical"
+                        android:text="每天30片"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:textSize="25dp"
+                        android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="扫码领取"
-                        android:textColor="#ff0000"
-                        android:textSize="25dp" />
-
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="数量有限"
-                        android:textColor="#ff0000"
-                        android:textSize="25dp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -227,28 +209,16 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/content"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:gravity="bottom"
-                        android:paddingLeft="10dp"
-                        android:text="活动时间"
+                        android:gravity="center_vertical"
+                        android:text="活动日期"
                         android:textColor="@android:color/holo_red_dark"
-                        android:textSize="26dp"
+                        android:textSize="25dp"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/timer"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="top"
-                        android:paddingLeft="40dp"
-                        android:text="s"
-                        android:textColor="@android:color/holo_red_dark"
-                        android:textSize="40dp"
-                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
