--- a/TVProject/app/src/main/res/layout/activity_main2.xml
+++ b/TVProject/app/src/main/res/layout/activity_main2.xml
@@ -44,7 +44,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/fedsj" />
+                    android:src="@drawable/code" />
             </LinearLayout>
 
             <LinearLayout
