--- a/TVProject/app/src/main/res/layout/activity_main1.xml
+++ b/TVProject/app/src/main/res/layout/activity_main1.xml
@@ -61,6 +61,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/show"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="5"
@@ -68,45 +69,44 @@
 
 
             <!--<net.bjyfkj.caa.model.AlwaysMarqueeTextView-->
-                <!--android:id="@+id/led1"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="1"-->
-                <!--android:ellipsize="marquee"-->
-                <!--android:focusable="true"-->
-                <!--android:focusableInTouchMode="true"-->
-                <!--android:gravity="center_vertical"-->
-                <!--android:lines="1"-->
-                <!--android:marqueeRepeatLimit="marquee_forever"-->
-                <!--android:scrollHorizontally="true"-->
-                <!--android:singleLine="true"-->
-                <!--android:textColor="@android:color/holo_red_dark"-->
-                <!--android:textSize="50dp" />-->
+            <!--android:id="@+id/led1"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:ellipsize="marquee"-->
+            <!--android:focusable="true"-->
+            <!--android:focusableInTouchMode="true"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:lines="1"-->
+            <!--android:marqueeRepeatLimit="marquee_forever"-->
+            <!--android:scrollHorizontally="true"-->
+            <!--android:singleLine="true"-->
+            <!--android:textColor="@android:color/holo_red_dark"-->
+            <!--android:textSize="50dp" />-->
 
             <!--<net.bjyfkj.caa.model.AlwaysMarqueeTextView-->
-                <!--android:id="@+id/led2"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="1"-->
-                <!--android:ellipsize="marquee"-->
-                <!--android:focusable="true"-->
-                <!--android:focusableInTouchMode="true"-->
-                <!--android:gravity="center_vertical"-->
-                <!--android:lines="1"-->
-                <!--android:marqueeRepeatLimit="marquee_forever"-->
-                <!--android:scrollHorizontally="true"-->
-                <!--android:singleLine="true"-->
-                <!--android:textColor="@android:color/holo_red_dark"-->
-                <!--android:textSize="50dp" />-->
+            <!--android:id="@+id/led2"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:ellipsize="marquee"-->
+            <!--android:focusable="true"-->
+            <!--android:focusableInTouchMode="true"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:lines="1"-->
+            <!--android:marqueeRepeatLimit="marquee_forever"-->
+            <!--android:scrollHorizontally="true"-->
+            <!--android:singleLine="true"-->
+            <!--android:textColor="@android:color/holo_red_dark"-->
+            <!--android:textSize="50dp" />-->
             <TextView
+                android:id="@+id/shop_address"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/shop_address"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:textSize="50dp"
                 android:textColor="@android:color/holo_red_dark"
-                android:text="雾霾天，扫码免费送口罩" />
+                android:textSize="50dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -130,16 +130,14 @@
                 <net.bjyfkj.caa.model.CarouselViewPager
                     android:id="@+id/mCarouselView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                </net.bjyfkj.caa.model.CarouselViewPager>
+                    android:layout_height="match_parent"></net.bjyfkj.caa.model.CarouselViewPager>
 
             </LinearLayout>
 
             <RelativeLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
             </RelativeLayout>
 
@@ -156,8 +154,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:layout_weight="4">
+                android:layout_weight="4"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/qrcode"
@@ -167,81 +165,34 @@
                     android:scaleType="centerCrop" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="5"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/content"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:textColor="@android:color/holo_red_dark"
-                        android:textSize="25dp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="2"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/title"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:textColor="@android:color/holo_red_dark"
-                        android:textSize="25dp"
-                        android:textStyle="bold"
-                        android:text="微信扫一扫\n优惠马上用" />
-
-                </LinearLayout>
-            </LinearLayout>
-
             <RelativeLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="5">
+                android:layout_weight="5"
+                android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/imageView2"
                     android:layout_above="@+id/textView5"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:src="@drawable/masks" />
 
                 <TextView
+                    android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="扫码送口罩"
-                    android:gravity="center"
-                    android:textSize="25dp"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:layout_gravity="bottom"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/textView5" />
+                    android:layout_gravity="bottom"
+                    android:gravity="center"
+                    android:text="扫码送口罩"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="25dp" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
