--- a/TVProject/app/src/main/res/layout/activity_main1.xml
+++ b/TVProject/app/src/main/res/layout/activity_main1.xml
@@ -203,7 +203,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_gravity="bottom"
                     android:gravity="center"
-                    android:text="扫码送啤酒"
+                    android:text="扫码送啤酒\n(限量)"
                     android:textColor="@android:color/holo_red_dark"
                     android:textSize="25dp"
                     android:paddingBottom="10dp" />
