无网状态解决

--- a/TVProject/app/src/main/res/layout/activity_main1.xml
+++ b/TVProject/app/src/main/res/layout/activity_main1.xml
@@ -119,8 +119,7 @@
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
                 android:textColor="@android:color/holo_red_dark"
-                android:textSize="50dp"
-                android:text="活动内容" />
+                android:textSize="50dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -192,8 +191,7 @@
                     android:layout_height="match_parent"
                     android:layout_above="@+id/description"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:src="@drawable/beer" />
+                    android:layout_alignParentStart="true" />
 
                 <TextView
                     android:id="@+id/description"
@@ -204,7 +202,6 @@
                     android:layout_alignParentStart="true"
                     android:layout_gravity="bottom"
                     android:gravity="center"
-                    android:text="扫码送啤酒\n(限量)"
                     android:textColor="@android:color/holo_red_dark"
                     android:textSize="25dp"
                     android:paddingBottom="10dp" />
